# SWIGXPlatformDemo

./: README.md  SWIGXPlatformDemo.sln
AmazingCounterLib/: AmazingCounter.cs  AmazingCounterLib.csproj  amazing_counter.cs  amazing_counterPINVOKE.cs
AmazingCounterLib/AmazingCounterLib/: AmazingCounter.cs
AmazingCounterLib_CPP/: CMakeLists.txt
AmazingCounterLib_CPP/include/amazing_counter/: amazing_counter.h
AmazingCounterLib_CPP/src/: amazing_counter.cpp
AmazingCounterLib_CPP/swig/: amazing_counter.i
SWIGXPlatformDemoExample/: Program.cs  SWIGXPlatformDemoExample.csproj
